# learning_ai

./: .env.example  .gitignore  README.md  pyproject.toml
ai_job_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  config.py  main.py  models.py  scoring.py  service.py
app/providers/: __init__.py  heuristic.py  openai_provider.py
gpt_example1/: requirements.txt
gpt_example1/app/: llm_client.py  main.py  schemas.py  tools.py
gpt_example1/tests/: test_tools.py
tests/: test_api.py  test_scoring.py
